--- a/package.json
+++ b/package.json
@@ -5,12 +5,15 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start -p $PORT"
+    "start": "next start -p $PORT",
+    "lint_check": "prettier --check \"**/*.{js,jsx,ts,tsx,json,md}\"",
+    "lint_write": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md}\""
   },
   "dependencies": {
     "date-fns": "^2.17.0",
     "gray-matter": "^4.0.2",
     "next": "^10.0.0",
+    "prettier": "^2.2.1",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "remark": "^13.0.0",
